hover colors implemented. Need to fix dropdown spacing

--- a/src/components/ui/header/header.module.scss
+++ b/src/components/ui/header/header.module.scss
@@ -39,6 +39,7 @@
   display: flex;
   color: var(--color-light-100);
   cursor: pointer;
+  transition: all 0.4s ease;
 
   &:hover {
     color: var(--color-accent-100);
